--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     src="vidovoe_var1.glb"
     camera-controls
     auto-rotate
-    auto-rotate-delay="10000"
+    auto-rotate-delay="1000000"
     rotation-per-second="0.2rad"
     shadow-intensity="1"
     environment-image="neutral"
